fixed image responsiveness
images became too big

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ nav#video-games ul li a
 
 img 
 {
-  width: 100%;
+  max-width: 50%;
   height: auto;
   float: center;
 }
